Final copy for 28 May 2023

--- a/newsletter/2023-05-28.md
+++ b/newsletter/2023-05-28.md
@@ -17,9 +17,11 @@ So how did the Bitcoin network end up storing artwork like [this image](https://
 
 Enter [Ordinals](https://academy.binance.com/en/articles/what-are-ordinals-an-overview-of-bitcoin-nfts), a protocol launched in January 2023 that allows someone to turn the smallest tradeable unit of a bitcoin, called a satoshi, into a non-fungible token. This is done by inscribing additional information onto that satoshi using Bitcoin's shared ledger, stuff beyond the purely transaction-related data that capital-s Satoshi originally envisioned.
 
-What's ensued since the launch of Ordinals is either pure awesomeness or utter sacrilege, depending on your view of Bitcoin. Its chain is now the [number-two venue](https://www.nftculture.com/nft-news/bitcoin-emerges-as-second-largest-nft-blockchain-challenging-ethereums-dominance/) for NFT activity overall, behind only Ethereum and ahead of earlier contenders like Solana. But that's meant slower traffic and [higher fees](https://coinmarketcap.com/community/articles/64182b5f2d80720f9caa20ad/) on the Bitcoin network, infuriating "traditional" users who just want to [use BTC as money](https://bitcoinmagazine.com/culture/bitcoin-ordinal-problems-solved-by-layer-2).
+What's ensued since the launch of Ordinals is either pure awesomeness or utter sacrilege, [depending](https://news.bitcoin.com/meet-ordinals-the-new-bitcoin-nft-engine-and-the-drama-surrounding-them/) on your view of Bitcoin.
 
-Even Peter Schiff, a gold-focused money manager and vocal bitcoin critic, unveiled a new [Ordinals artwork collection](https://twitter.com/PeterSchiff/status/1662210584178475008) on Friday, created in partnership with an artist who goes my Market Price. (Subtle!)
+Ordinals inscriptions have [exploded](https://decrypt.co/142415/passing-fad-bitcoin-ordinals-inscriptions-hit-new-milestone), turning Bitcoin into the [number-two network](https://www.nftculture.com/nft-news/bitcoin-emerges-as-second-largest-nft-blockchain-challenging-ethereums-dominance/) for NFT activity overall, behind only Ethereum and ahead of earlier contenders like Solana. But that's also meant slower traffic and [higher fees](https://coinmarketcap.com/community/articles/64182b5f2d80720f9caa20ad/) across the entire Bitcoin network, infuriating "traditional" users who just want to [use bitcoin as money](https://bitcoinmagazine.com/culture/bitcoin-ordinal-problems-solved-by-layer-2).
+
+Even Peter Schiff, a gold-focused money manager and vocal bitcoin critic, unveiled a new [Ordinals artwork collection](https://twitter.com/PeterSchiff/status/1662210584178475008) on Friday, created in partnership with an artist who goes by the handle Market Price. (Subtle!)
 
 Meanwhile, the startup Stably on Monday begain [issuing a dollar-backed stablecoin](https://www.coindesk.com/business/2023/05/25/bitcoins-hot-ordinals-economy-is-getting-a-dollar-backed-stablecoin/) using Ordinals. So now we effectively have U.S. dollars trading on the Bitcoin network.
 
@@ -27,9 +29,7 @@ That *definitely* isn't something Satoshi ever intended. But I suspect many more
 
 The week's other notable headlines:
 
-- Celsius assets sold to Fahrenheit. https://www.coindesk.com/policy/2023/05/25/fahrenheit-wins-bid-to-acquire-assets-of-insolvent-crypto-lender-celsius/
-
-- DCG sunset Tradeblock, its prime broerage unit. https://www.coindesk.com/business/2023/05/25/dcg-sunsets-trade-execution-prime-brokerage-unit-tradeblock/ | https://www.theblock.co/post/232289/dcg-shutters-crypto-institutional-services-subsidiary-tradeblock
+- **Bankruptcy updates:** Fahrenheit won the bidding for bankrupt crypto lender Celsius, which still holds $500 million of liquid cryptocurrency on its books, according to [Fortune](https://fortune.com/crypto/2023/05/25/celsius-fahrenheit-crypto-bankruptcy-auction/). Separately, troubled Digital Currency Group [missed a $630 million payment](https://www.kitco.com/news/2023-05-22/Gemini-considers-forbearance-after-DCG-misses-630-million-repayment.html) due to Gemini. And DCG said it will [shut down](https://www.ibtimes.com/dcg-announces-shutdown-institutional-trading-unit-tradeblock-over-crypto-winter-3695879) its institutional trading unit TradeBlock.
 
 - **WTF is going on with Tether?** The data firm Kaiko notes that the popular stablecoin's market valuation is [nearing a record](https://research.kaiko.com/insights/why-is-tethers-market-cap-approaching-all-time-highs) over $80 billion even though trading volume has been relatively weak in 2023. Decrypt [reports](https://decrypt.co/142036/tether-market-cap-edges-toward-all-time-high-minting-tron-surges) that rising usage of Tether on the Tron network for decentralized finance apps may be driving the valuation increase. Separately, Tether's parent company recently [announced](https://www.theblock.co/post/231156/tether-bitcoin-investments-profits) it is shifting its reserve strategy away from purchases of U.S. government debt and toward crypto, including bitcoin.
 
@@ -37,21 +37,14 @@ The week's other notable headlines:
 
 - **Bitcoinist reports** that Ethereum "whales" have [accumulated $9 billion in ETH](https://bitcoinist.com/ethereum-whales-on-the-rise-acquires-billion-eth/) so far this year, spurred in part by the network's transition to a new Proof of Stake consensus mechanism. The report is based on data from the analytics firm IntoTheBlock, which [defines an ETH "whale"](https://twitter.com/intotheblock/status/1661995894667984896) as any single wallet that controls more than 0.1% of token supply.
 
-- Ledger situation. https://www.coindesk.com/business/2023/05/23/crypto-wallet-provider-ledger-postpones-release-of-key-recovery-service-after-public-criticism/
+- **Wallet maker Ledger** delayed a [controversial](https://www.coindesk.com/business/2023/05/23/crypto-wallet-provider-ledger-postpones-release-of-key-recovery-service-after-public-criticism/) software update would increase users' ability to recover their crypto keys. However, critics say the changes would also make wallets less secure.
 
-- Sam Altman's Worldcoin raised $115M. https://www.coindesk.com/business/2023/05/25/sam-altmans-crypto-project-worldcoin-raises-115m-led-by-blockchain-capital/ | https://www.theblock.co/post/232172/worldcoin-developer-announces-115-million-fundraise
+- **OpenAI CEO Sam Altman's** crypto startup Worldcoin [raised $115M](https://www.coindesk.com/business/2023/05/25/sam-altmans-crypto-project-worldcoin-raises-115m-led-by-blockchain-capital/).
 
-- Ava Labs launched a "no-code" web3 platform for businesses to build decentralized apps without having to code them from scratch. https://www.coindesk.com/web3/2023/05/24/ava-labs-launches-no-code-web3-launchpad-avacloud/
+- **Ava Labs launched** a "no-code" web3 platform for businesses to [build decentralized apps](https://www.coindesk.com/web3/2023/05/24/ava-labs-launches-no-code-web3-launchpad-avacloud/) without having to code them from scratch.
 
-- Hong Kong unveiled a new regulatiory code for crypto.  https://bitcoinist.com/crypto-hk-proclaimed-leader-in-global-market/
-
-- Worries about US competitiveness. https://www.barrons.com/news/thousands-quit-us-over-crypto-negativity-blockchain-chief-2d8a10d8 | Cathie Wood says the U.S. is "losing" the race to be a bitcoin hub. https://www.coindesk.com/policy/2023/05/23/us-is-losing-the-bitcoin-movement-cathie-wood/
-
-- Brazil is launching a CBDC. https://www.coindesk.com/policy/2023/05/25/brazils-central-bank-selects-14-participants-for-cbdc-pilot/ | https://www.coindesk.com/policy/2023/05/25/brazils-central-bank-selects-14-participants-for-cbdc-pilot/
-
-- MasterCard makes bullish statements on blockchain to TechCrunch. https://techcrunch.com/2023/05/24/mastercard-blockchain-crypto/
-
-- Ripples CEO explained why it bought a stake in the exchange Bitstamp. https://www.theblock.co/post/232223/ripple-bitstamp-pantera-galaxy-digital
+- **Hong Kong is the world's most crypto-ready jurisdiction**, followed by the U.S. and Switzerland, according to [a new report](https://forexsuggest.com/worldwide-crypto-readiness-report/) by the trading education platform Forex Suggest.
+crypto-hk-proclaimed-leader-in-global-market/
 
 <hr>
 <em>  
@@ -62,11 +55,7 @@ The week's other notable headlines:
 
 - **JPMorgan Chase has applied for a trademark** on a finance-focused AI chatbot [called IndexGPT](https://decrypt.co/142577/jp-morgan-files-patent-for-chatgpt-finance-clone-indexgpt).
 
-- Brave unveiled NFT-enabled video calls. https://www.coindesk.com/web3/2023/05/24/web3-friendly-browser-brave-introduces-nft-gated-video-calls/
-
-- A paralyzed Dutch man walked thanks to a new cybernetic interace. <!-- https://www.science.org/content/article/paralyzed-man-walks-naturally-thanks-wireless-bridge-brain-spine?et_rid=34848442&et_cid=4744397 | https://www.technologyreview.com/2023/05/26/1073655/how-it-feels-to-have-a-life-changing-brain-implant-removed/ -->
-
-- Brooklyn Public Library... https://twitter.com/evacide/status/1662535041615028225
+- **Browser maker Brave** is launching private video conferencing [secured with NFTs](https://www.benzinga.com/23/05/32582879/brave-a-web3-friendly-browser-launches-video-calls-leveraging-nfts-and-poaps). 
 
 - **Princess Leia's dress from A New Hope is up for auction.** The item, which was (ahem) "removed" from the movie's set in 1977 by a crew member, is expected to [fetch $2 million](https://www.msn.com/en-us/movies/news/lost-and-bloodied-princess-leia-dress-from-star-wars-up-for-2m-auction/ar-AA1bDRnB). The auction will also feature props from The Dark Knight, Blade Runner, Guardians of the Galaxy. and Poltergeist, according to [The Hollywood Reporter](https://www.hollywoodreporter.com/movies/movie-news/historic-prop-auction-princess-leia-dress-star-lord-helmet-1235499199/).
 
