Final copy for 4 June 2023

--- a/newsletter/2023-06-04.md
+++ b/newsletter/2023-06-04.md
@@ -1,4 +1,4 @@
-# I'm using AI to study web development.
+# Americans really love-hates crypto right now.
 ## #Web3Weekly: May 28 to June 3, 2023
 
 *This newsletter is elated to be a media partner of the [Epic Web3 Conference](https://www.epicweb3.com/), coming up June 9 in Lisbon. This can't-miss event will feature an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space, as you can see from the graphic below.*
@@ -7,67 +7,31 @@
 
 *EW3 is shaping up to be a truly amazing event, so be sure to get your pass ASAP. [Book your discounted pass today!](http://bit.ly/3kDskvF)*
 
-<!--
+**Decrypt spotted** a fascinating [contradiction](https://decrypt.co/142698/americans-may-not-love-crypto-but-these-top-brands-are-into-it) in the latest Axios Harris Poll 100, an annual ranking widely followed among marketers.
 
-Lead riff on studying web development...
+Axios Harris takes a novel two-step approach. First, pollsters determine the 100  brand names most widely recognized among the American public. Then they measure whether that recognition is due to negative or positive perceptions.
 
-- GitHub curriculum link. https://github.com/peteramckay/fs-study-plan/blob/main/plan.md
+Among the most negatively perceived brands on [the 2023 list](https://www.axios.com/2023/05/23/corporate-brands-reputation-america) were Bitcoin, ranked 93, and FTX at 99. (Dead last was the Trump Organization, in case you're wondering.)
 
-- Former Meta data scientist Tina Huang shoutout: https://www.youtube.com/watch?v=VznoKyh6AXs | She asked to study Python for data science.
+At the same time, Decrypt points out that several positively perceived brands are proudly experimenting with web3 via non-fungible tokens, in-house innovation labs, venture investment in the space, or other projects. The names in this category include Chick-Fil-A (#5 in the Axios Harris ranking), Toyota (#6), Sony (#12), Kellogg (#26), and Pfizer (#50).
 
--->
+[![EWC banner ad](https://w3w.news/img/sponsored/Speakers1.png)](http://bit.ly/3kDskvF)
+
+**Why this matters:** The big question is how to interpret the mixed Axios Harris results as a [leading indicator](https://www.investopedia.com/terms/l/leadingindicator.asp) of where web3 is headed. On the one hand, we have negative claims people are making *verbally* to pollsters. On the other, we have *actions* that other people are taking that reflect a diametrically opposite, more bullish outlook for the future.
+
+I think it's obvious which one we should take more seriously. But, hey, judge for yourself.
 
 The latest headlines:
 
-- Bitcoin Ordinals now has 50% 400M in nfts million on eth volume. Ordinals just under 180M in last 30 days. Most of it. Zhuoxun Yin Magic Eden co-founder and COO to Bloomberg. <!-- 19-min mark or so in the show... Get YouTube link -->
+- **Bitcoin and ether** both fell in May, suffering their first monthly declines of 2023. However, the two biggest tokens can still claim solid gains for the year overall, with bitcoin up 63% and ether up 55%, [according to CNBC](https://www.cnbc.com/2023/05/31/bitcoin-falls-ahead-of-debt-ceiling-vote-heads-for-first-its-losing-month-of-the-year.html).
 
-- Pew polling on Americans awareness, usage of ChatGPT. https://www.pewresearch.org/short-reads/2023/05/24/a-majority-of-americans-have-heard-of-chatgpt-but-few-have-tried-it-themselves/
+- **Hong Kong unveiled** new rules to allow licensed crypto exchanges to serve retail customers. Barron's [notes](https://www.barrons.com/news/hong-kong-launches-retail-friendly-rules-for-crypto-exchanges-eb6ab6c6) that the move is a notable exception to the recent trend of jurisdictions around the world tightening oversight of token markets.
 
-- FIFA and EA Sports are adding Nike NFTs to their video games. https://decrypt.co/143110/fifa-madden-maker-ea-sports-add-nike-nft-apparel-games | https://www.coindesk.com/web3/2023/06/01/nike-is-bringing-its-swoosh-nfts-to-ea-sports-games/
+- **Artificial intelligence could pose an extinction-level threat** to humanity, according to an [open letter](https://www.safe.ai/statement-on-ai-risk) by the nonprofit Center for AI Safety. More than 300 tech-industry insiders signed the document, which advocates [safeguards for AI](https://www.nytimes.com/2023/05/30/technology/ai-threat-warning.html) similar to those concerning pandemics and nuclear weapons.
 
-- Consensys on avoiding crypto scams. https://consensys.net/blog/metamask/understanding-and-avoiding-crypto-honeypot-scams/
+- **Chipmaker Nvidia's stock valuation** briefly [topped $1 trillion](https://www.reuters.com/technology/nvidia-sets-eye-1-trillion-market-value-2023-05-30/) on Wednesday, helped by expectations of strong sales for chips tailored to artificial intelligence applications. Nvidia retreated slightly to end the week with a valuation of $971 billion, just shy of the thirteen-digit milestone previously achieved by only a handful of stock-market behemoths like Apple, Microsoft, and Alphabet.
 
-- Kraken gained a lot of customers in Canada after Binance announced it was ceasing operations there. https://www.coindesk.com/business/2023/06/01/crypto-exchange-krakens-canada-customer-deposits-rose-25-after-binance-announced-departure/
-
-- Evan's free speech issue: https://www.wsj.com/articles/missing-their-son-evan-gershkovichs-parents-traveled-to-moscow-for-hearing-d4d83bf2?st=la1wn3i1tal6s77&reflink=desktopwebshare_permalink
-
-- AI poses risk of extinction. https://www.nytimes.com/2023/05/30/technology/ai-threat-warning.html
-
-- Dowd on Frankenstein, liberal arts. https://www.nytimes.com/2023/05/27/opinion/english-humanities-ai.html
-
-- The amount of USDC backing DAI has plummeted. https://decrypt.co/142801/usdc-backing-makers-stablecoin-dai-plummets | MakerDAO is also cutting Paxos allocation entirely: https://www.coindesk.com/markets/2023/06/01/makerdao-votes-to-ditch-500m-in-paxos-dollar-stablecoin-from-reserve-assets/
-
-- wechat enabled new bitcoin functionality. <!-- Need link -->
-
-- hk has regulated exchanges.  <!-- Need link -->
-
-- Gemini legal issues.
-
-- worst month of the yr for btc & eth. (May)  <!-- Need link --> | BTC market internals were crazy as well...  https://www.theblock.co/post/232897/bitcoin-active-users-fees-and-transactions-had-a-wild-ride-in-may-amid-memecoin-mania | Miner revenue was up: https://www.theblock.co/post/232886/bitcoin-miner-revenue-climbs-to-916-million-in-may
-
-- Weinermobile story: https://slate.com/human-interest/2023/05/oscar-mayer-wienermobile-drivers-sex-jamie-loftus-hot-dog.html
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- Move these promos up once news summary is finalized -->
-
-[![EWC banner ad](https://w3w.news/img/sponsored/Speakers1.png)](http://bit.ly/3kDskvF)
+- **Other AI updates:** Busines Insider [reports](https://www.businessinsider.com/ai-trending-google-search-bitcoin-metaverse-chatgpt-artificial-intelligence-2023-5) that Google searches for the term "AI" have increased markedly, but haven't yet equaled the peak of "bitcoin" searches set in 2017... New polling from the Pew Research Center shows that 60% of Americans have heard of ChatGPT, but [less than 15%](https://www.pewresearch.org/short-reads/2023/05/24/a-majority-of-americans-have-heard-of-chatgpt-but-few-have-tried-it-themselves/) have actually tried it...
 
 <hr>
  <em>
@@ -75,6 +39,14 @@ The latest headlines:
   <p><strong>Launching a new token?</strong> Bitbond's <a href="https://tokentool.bitbond.com/?utm_content=">intuitive platform</a> will help you get through the process in minutes. No development experience needed! Even better, #Web3Weekly readers will save 10% on your issuance fees when you use the discount code QEHECMGR at checkout. <strong><a href="https://tokentool.bitbond.com/?utm_content=">Get started with Bitbond today!</a></strong>
  </em></p>
 <hr>
+
+- **MakerDAO is reducing** holdings [of USDC](https://decrypt.co/142801/usdc-backing-makers-stablecoin-dai-plummets) and the [Paxos Dollar](https://www.coindesk.com/markets/2023/06/01/makerdao-votes-to-ditch-500m-in-paxos-dollar-stablecoin-from-reserve-assets/) in lieu of U.S. Treasury bonds to back its DAI stablecoin.
+
+- **CoinDesk reports** that Kraken's customer deposits in Canada [rose 25%](https://www.coindesk.com/business/2023/06/01/crypto-exchange-krakens-canada-customer-deposits-rose-25-after-binance-announced-departure/) after rival Binance recently announced its departure from the country.
+
+- **Nike and EA Sports** announced a new partnership to [add NFT-based features](https://www.coindesk.com/web3/2023/06/01/nike-is-bringing-its-swoosh-nfts-to-ea-sports-games/) to the latter's video games.
+
+- **Just in time for summer,** Slate published an utterly hilarious (and NSFW) story about Oscar Meyer's [Weinermobile](https://slate.com/human-interest/2023/05/oscar-mayer-wienermobile-drivers-sex-jamie-loftus-hot-dog.html).
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
