--- a/newsletter/2023-06-04.md
+++ b/newsletter/2023-06-04.md
@@ -1,4 +1,4 @@
-# Americans really love-hates crypto right now.
+# Americans really love-hate crypto right now.
 ## #Web3Weekly: May 28 to June 3, 2023
 
 *This newsletter is elated to be a media partner of the [Epic Web3 Conference](https://www.epicweb3.com/), coming up June 9 in Lisbon. This can't-miss event will feature an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space, as you can see from the graphic below.*
