--- a/newsletter/2023-06-04.md
+++ b/newsletter/2023-06-04.md
@@ -1,4 +1,4 @@
-# Americans really love-hate crypto right now.
+# Americans really love-hates crypto right now.
 ## #Web3Weekly: May 28 to June 3, 2023
 
 *This newsletter is elated to be a media partner of the [Epic Web3 Conference](https://www.epicweb3.com/), coming up June 9 in Lisbon. This can't-miss event will feature an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space, as you can see from the graphic below.*
@@ -7,6 +7,8 @@
 
 *EW3 is shaping up to be a truly amazing event, so be sure to get your pass ASAP. [Book your discounted pass today!](http://bit.ly/3kDskvF)*
 
+[![EWC banner ad](https://w3w.news/img/sponsored/Speakers1.png)](http://bit.ly/3kDskvF)
+
 **Decrypt spotted** a fascinating [contradiction](https://decrypt.co/142698/americans-may-not-love-crypto-but-these-top-brands-are-into-it) in the latest Axios Harris Poll 100, an annual ranking widely followed among marketers.
 
 Axios Harris takes a novel two-step approach. First, pollsters determine the 100  brand names most widely recognized among the American public. Then they measure whether that recognition is due to negative or positive perceptions.
@@ -14,8 +16,6 @@ Axios Harris takes a novel two-step approach. First, pollsters determine the 100
 Among the most negatively perceived brands on [the 2023 list](https://www.axios.com/2023/05/23/corporate-brands-reputation-america) were Bitcoin, ranked 93, and FTX at 99. (Dead last was the Trump Organization, in case you're wondering.)
 
 At the same time, Decrypt points out that several positively perceived brands are proudly experimenting with web3 via non-fungible tokens, in-house innovation labs, venture investment in the space, or other projects. The names in this category include Chick-Fil-A (#5 in the Axios Harris ranking), Toyota (#6), Sony (#12), Kellogg (#26), and Pfizer (#50).
-
-[![EWC banner ad](https://w3w.news/img/sponsored/Speakers1.png)](http://bit.ly/3kDskvF)
 
 **Why this matters:** The big question is how to interpret the mixed Axios Harris results as a [leading indicator](https://www.investopedia.com/terms/l/leadingindicator.asp) of where web3 is headed. On the one hand, we have negative claims people are making *verbally* to pollsters. On the other, we have *actions* that other people are taking that reflect a diametrically opposite, more bullish outlook for the future.
 
