Spelling, highlighting fixes

--- a/newsletter/2023-06-04.md
+++ b/newsletter/2023-06-04.md
@@ -1,4 +1,4 @@
-# Americans really love-hate crypto right now.
+# Americans really love-hates crypto right now.
 ## #Web3Weekly: May 28 to June 3, 2023
 
 *This newsletter is elated to be a media partner of the [Epic Web3 Conference](https://www.epicweb3.com/), coming up June 9 in Lisbon. This can't-miss event will feature an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space, as you can see from the graphic below.*
@@ -25,13 +25,13 @@ The latest headlines:
 
 - **Bitcoin and ether** both fell in May, suffering their first monthly declines of 2023. However, the two biggest tokens can still claim solid gains for the year overall, with bitcoin up 63% and ether up 55%, [according to CNBC](https://www.cnbc.com/2023/05/31/bitcoin-falls-ahead-of-debt-ceiling-vote-heads-for-first-its-losing-month-of-the-year.html).
 
-- **Hong Kong unveiled** new rules to allow licensed crypto exchanges to serve retail customers. Barron's [notes](https://www.barrons.com/news/hong-kong-launches-retail-friendly-rules-for-crypto-exchanges-eb6ab6c6) that the move is a notable exception to the recent trend of jurisdictions around the world tightening oversight of token markets.
+- **Hong Kong unveiled new rules** to allow licensed crypto exchanges to serve retail customers. Barron's [notes](https://www.barrons.com/news/hong-kong-launches-retail-friendly-rules-for-crypto-exchanges-eb6ab6c6) that the move is a notable exception to the recent trend of jurisdictions around the world tightening oversight of token markets.
 
-- **Artificial intelligence could pose an extinction-level threat** to humanity, according to an [open letter](https://www.safe.ai/statement-on-ai-risk) by the nonprofit Center for AI Safety. More than 300 tech-industry insiders signed the document, which advocates [safeguards for AI](https://www.nytimes.com/2023/05/30/technology/ai-threat-warning.html) similar to those concerning pandemics and nuclear weapons.
+- **Artificial intelligence could pose an extinction-level threat to humanity**, according to an [open letter](https://www.safe.ai/statement-on-ai-risk) by the nonprofit Center for AI Safety. More than 300 tech-industry insiders signed the document, which advocates [safeguards for AI](https://www.nytimes.com/2023/05/30/technology/ai-threat-warning.html) akin to those for pandemics and nuclear weapons.
 
-- **Chipmaker Nvidia's stock valuation** briefly [topped $1 trillion](https://www.reuters.com/technology/nvidia-sets-eye-1-trillion-market-value-2023-05-30/) on Wednesday, helped by expectations of strong sales for chips tailored to artificial intelligence applications. Nvidia retreated slightly to end the week with a valuation of $971 billion, just shy of the thirteen-digit milestone previously achieved by only a handful of stock-market behemoths like Apple, Microsoft, and Alphabet.
+- **Chipmaker Nvidia's stock valuation** briefly [topped $1 trillion](https://www.reuters.com/technology/nvidia-sets-eye-1-trillion-market-value-2023-05-30/) on Wednesday, helped by expectations of strong sales for chips tailored to AI applications. Nvidia retreated slightly to end the week with a valuation of $971 billion, just shy of the thirteen-digit milestone previously achieved only by a handful of stock-market behemoths like Apple, Microsoft, and Alphabet.
 
-- **Other AI updates:** Busines Insider [reports](https://www.businessinsider.com/ai-trending-google-search-bitcoin-metaverse-chatgpt-artificial-intelligence-2023-5) that Google searches for the term "AI" have increased markedly, but haven't yet equaled the peak of "bitcoin" searches set in 2017... New polling from the Pew Research Center shows that 60% of Americans have heard of ChatGPT, but [less than 15%](https://www.pewresearch.org/short-reads/2023/05/24/a-majority-of-americans-have-heard-of-chatgpt-but-few-have-tried-it-themselves/) have actually tried it...
+- **The general public has taken notice of AI as well.** Busines Insider [reports](https://www.businessinsider.com/ai-trending-google-search-bitcoin-metaverse-chatgpt-artificial-intelligence-2023-5) that Google searches for the term "AI" have increased markedly, but haven't yet equaled the peak of "bitcoin" searches set in 2017. Meanwhile, new polling from the Pew Research Center shows that 60% of Americans have heard of ChatGPT, but [less than 15%](https://www.pewresearch.org/short-reads/2023/05/24/a-majority-of-americans-have-heard-of-chatgpt-but-few-have-tried-it-themselves/) have actually tried it.
 
 <hr>
  <em>
@@ -46,7 +46,7 @@ The latest headlines:
 
 - **Nike and EA Sports** announced a new partnership to [add NFT-based features](https://www.coindesk.com/web3/2023/06/01/nike-is-bringing-its-swoosh-nfts-to-ea-sports-games/) to the latter's video games.
 
-- **Just in time for summer,** Slate published an utterly hilarious (and NSFW) story about Oscar Meyer's [Weinermobile](https://slate.com/human-interest/2023/05/oscar-mayer-wienermobile-drivers-sex-jamie-loftus-hot-dog.html).
+- **Just in time for summer,** Slate published an utterly hilarious (and NSFW) story about Oscar Mayer's [Wienermobile](https://slate.com/human-interest/2023/05/oscar-mayer-wienermobile-drivers-sex-jamie-loftus-hot-dog.html).
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
