--- a/newsletter/2023-06-11.md
+++ b/newsletter/2023-06-11.md
@@ -1,4 +1,4 @@
-# The false dichotomy of AI versus crypto
+# The false dichotomy of "AI versus crypto"
 ## #Web3Weekly: June 4-10, 2023
 
 **Venture investor Jason Calicanis** set off a small furor Thursday [on Twitter](https://twitter.com/Jason/status/1666874821077250048) with this stark recommendation:
@@ -34,11 +34,13 @@ The week's other notable headlines:
 - **Bitcoin is holding up relatively better,** down "just" 4% over the past seven days. As a result, bitcoin dominance has risen [near 50%](https://www.coindesk.com/markets/2023/06/10/bitcoin-now-accounts-for-nearly-half-of-the-101-trillion-crypto-market-tradingview-data-show/) of the entire global crypto market's valuation of $1 trillion.  
 
 <hr>
+
 <em>  
   <p id="adtag">ADVERTISEMENT</p>
   <p><strong>Launching a new token?</strong> Bitbond's <a href="https://tokentool.bitbond.com/?utm_content=">intuitive platform</a> will help you get through the process in minutes. No development experience needed! Even better, #Web3Weekly readers will save 10% on your issuance fees when you use the discount code QEHECMGR at checkout. <strong><a href="https://tokentool.bitbond.com/?utm_content=">Get started with Bitbond today!</a></strong></p>
 </em>
-</hr>
+
+<hr>
 
 - **In a new blog post,** Ethereum founder Vitalik Buterin described [three major transitions](https://vitalik.eth.limo/general/2023/06/09/three_transitions.html) he believes the platform needs in order to continue its expansion. The changes comprise better "layer-2" scaling solutions, wider usage of smart contract wallets, and improved privacy for token transfers.
 
