Edits to lead item...

--- a/newsletter/2023-06-11.md
+++ b/newsletter/2023-06-11.md
@@ -13,11 +13,11 @@ As an assessment of two emerging technologies on their merits, his framing utter
 
 At the Epic Web3 Conference on Friday, Polygon's Boris Spremo, neatly captured the real problem with Calicanis's framing. On a panel about attracting developers to web3, Spremo made two key points:
 
-1. **Blockchains are databases, whereas artificial intelligence is logic.** So from a technical standpoint, the Calicanis tweet is really like comparing apples to oranges. That does lead to..
+1. **Blockchains are databases, whereas artificial intelligence is logic.** So from a technical standpoint, the Calicanis tweet is really like comparing apples to oranges. However...
 
-2. **Why not combine them?** Applying logic to a database is a basic aspect of building an application. So why can't AI logic and blockchain data be used *together* to build all sorts of products?
+2. **Why not combine them?** Using logic to extract some value from a database is a basic aspect of building internet applications. So why can't AI logic and blockchain data be used *together* to build all sorts of products?
 
-Just to give one simple example: I would love to see an AI app that uses on-chain identity -- and therefore gives users better control over the data they create on the platform -- while providing access to awesome AI functionality. ChatGPT doesn't do this, as its identity model is centralized, exactly like the ones that have enabled so many privacy nightmares on social and search apps.
+Just to give one simple example: I would love to see an AI app that uses on-chain identity -- and therefore gives users better control over the data they create on the platform -- while providing access to awesome AI functionality. ChatGPT doesn't do this, as its identity model is centralized, exactly as in the social and search apps that have suffered so many privacy nightmares.
 
 For all the ink being spilled in the press right now about the exciting new frontiers being opened by AI, this old, very familiar pattern isn't getting nearly enough attention, in my opinion. A web3 solution would fix it.
 
@@ -34,12 +34,10 @@ The week's other notable headlines:
 - **Bitcoin is holding up relatively better,** down "just" 4% over the past seven days. As a result, bitcoin dominance has risen [near 50%](https://www.coindesk.com/markets/2023/06/10/bitcoin-now-accounts-for-nearly-half-of-the-101-trillion-crypto-market-tradingview-data-show/) of the entire global crypto market's valuation of $1 trillion.  
 
 <hr>
-
 <em>  
   <p id="adtag">ADVERTISEMENT</p>
   <p><strong>Launching a new token?</strong> Bitbond's <a href="https://tokentool.bitbond.com/?utm_content=">intuitive platform</a> will help you get through the process in minutes. No development experience needed! Even better, #Web3Weekly readers will save 10% on your issuance fees when you use the discount code QEHECMGR at checkout. <strong><a href="https://tokentool.bitbond.com/?utm_content=">Get started with Bitbond today!</a></strong></p>
 </em>
-
 <hr>
 
 - **In a new blog post,** Ethereum founder Vitalik Buterin described [three major transitions](https://vitalik.eth.limo/general/2023/06/09/three_transitions.html) he believes the platform needs in order to continue its expansion. The changes comprise better "layer-2" scaling solutions, wider usage of smart contract wallets, and improved privacy for token transfers.
