Fleshing out news summary

--- a/newsletter/2023-06-18.md
+++ b/newsletter/2023-06-18.md
@@ -23,29 +23,31 @@ The week's other notable headlines:
 
 - **Tether briefly lost its peg** to the U.S. dollar on Thursday due to [heavy swap trading](https://cointelegraph.com/news/curve-pool-imbalance-usdt-depeg-concerns-tether-cto-calls-it-fud) on the Curve platform, where traders unloaded USDT for rivals DAI and USDC. Tether has since regained its $1 price, but the incident is a worrisome precedent due to USDT's role as a tool to finance trades throughout the broader token market.
 
-- **The Federal Reserve's policy committee** held its rate target [steady at 5%](https://www.nbcnews.com/business/economy/federal-reserve-interest-rate-decision-june-2023-pause-how-much-rcna88922), surprising traders who expected another hike to fight inflation. Market response has been muted so far, but if the Fed remains dovish for the longer-term, that would tend to support investment in risk assets like stocks and crypto. <!-- Update as needed -->
+- **The Federal Reserve's policy committee** held its rate target [steady at 5%](https://www.nbcnews.com/business/economy/federal-reserve-interest-rate-decision-june-2023-pause-how-much-rcna88922), surprising traders who expected another hike to fight inflation. The S&P 500 hit a new high for the year on Thursday and finished with a fifth straight weekly gain. Bitcoin was modestly higher as well, up nearly 2% for the week.
 
 - **See how that works, America?** Brazil's government just designated its central bank and its securities commission as the responsible agencies for regulating crypto. Now it's [perfectly clear](https://www.coindesk.com/policy/2023/06/14/brazil-appoints-central-bank-and-securities-commission-as-crypto-market-regulators) to everyone who does and doesn't have authority over this new investment category there. Must be nice.
 
-- BlackRock proposes a new bitcoin ETF. https://decrypt.co/145000/blackrock-bitcoin-etf-real-deal
+- **Investment giant BlackRock** proposed a [new exchange-traded fund](https://decrypt.co/145000/blackrock-bitcoin-etf-real-deal) tracking bitcoin prices. Many issuers have tried previously, but the SEC has been reluctant to approve such a listing in the U.S.
 
-- Update on Solana's smartphone. https://www.theblock.co/post/234430/solana-smart-phone-saga
+- **The Block checked in** with several users of the Saga, Solana's web3-focused smartphone, to see [what they think](https://www.theblock.co/post/234430/solana-smart-phone-saga) of it so far. Reviews are mixed, with one user complaining he can't use ApplePay on the device. One big plus, however: Zero platform fees for in-app purchases, versus 15-30% on iOS and Android.
 
-- **Ready Games** launched new tools for [building web3 games](https://venturebeat.com/games/ready-games-launches-tools-for-building-web3-mobile-games/).
+- **Ready Games** launched a new toolkit for [building web3 mobile games](https://venturebeat.com/games/ready-games-launches-tools-for-building-web3-mobile-games/).
 
+<!--
 - BNB Chain volume rose 65% in May. https://www.theblock.co/post/234723/bnb-chain-volume-rose-65-between-april-and-may
 
 - Crypto broker FPG halted withdrawals after suffering a cyberattack in which hackers stole $15 million in assets. https://www.theblock.co/post/234587/crypto-fpg-halts-withdrawals-cyber-attack
 
-- Bloomberg: Global inflows to exchange-traded crypto prodcts has dried up, even though they've been handily outperforming the market. <!-- Need link -->
+<!--
+- Bloomberg: Global inflows to exchange-traded crypto prodcts has dried up, even though they've been handily outperforming the market. <!-- Need link
 
-- eToro is stopping US customers from opening new positions in certain tokens identified by the SEC as securities. <!-- TKTKTKTK -->
+- eToro is stopping US customers from opening new positions in certain tokens identified by the SEC as securities. <!-- TKTKTKTK
 
-- Intel may invest in ARM's IPO. <!-- Need updates, links. -->
+- Intel may invest in ARM's IPO. <!-- Need updates, links.
 
 - Genesis amended its bankruptcy filing. <!-- Need link -->
 
-- beach-friendly wheelchairs. https://www.nytimes.com/2023/06/07/travel/beach-wheelchairs-disabled-travel.html
+- **Custodia CEO Caitlin Long** celebrated [winning an innovation award](https://twitter.com/CaitlinLong_/status/1668415046739697664) from American Banker. That publication is truly one of the bibles of the traditional finance industry, so it's a nice piece of recognition indeed for a crypto exec. Congrats!
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
